<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">101农资网</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="type_name_hufei">化肥</string>
    <string name="type_name_zhongzi">种子</string>
    <string name="type_name_nongyao">农药</string>
    <string name="type_name_nongji">农机</string>
    <string name="type_name_nongmo">农膜</string>
    <string name="bottom_name_home">首页</string>
    <string name="bottom_name_project">找产品</string>
    <string name="bottom_name_info">行业资讯</string>
    <string name="bottom_name_user">个人中心</string>
    <string name="search_hint">请输入想要查询的农产品</string>
    <string name="input_search_name">请输入产品名称</string>
    <string name="btn_cancel">搜索</string>
    <string name="search_result">搜索结果</string>
    <string name="moren">默认</string>
    <string name="pinpai">品牌</string>
    <string name="tips">温馨提示</string>
    <string name="yongtu">用途</string>
    <string name="jinghanliang">净含量</string>
    <string name="jiage">价格</string>
    <string name="tjpp">推荐品牌</string>
    <string name="qb">全部</string>
    <string name="qbyt">全部用途</string>
    <string name="zonghe">综合</string>
    <string name="nstnf">农商通年份</string>
    <string name="user_name_hint">用户名/手机号/邮箱</string>
    <string name="user_psd_hint">请输入密码</string>
    <string name="login">登录</string>
    <string name="forget_psd">忘记密码</string>
    <string name="user_regist">用户注册</string>
    <string name="hqyzm">获取验证码</string>
    <string name="next">下一步</string>
    <string name="input_tel_number">请输入手机号</string>
    <string name="input_hqyzm">请输入验证码</string>
    <string name="nick">昵称</string>
    <string name="input_psd">请输入密码</string>
    <string name="input_psd_again">请再次输入密码</string>
    <string name="finish">完成</string>
    <string name="ljgm">立即购买</string>
    <string name="forget_psd_hint">请输入手机号/邮箱</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="setting_new_psd">请设置新密码</string>
    <string name="setting_new_psd_again">请再次输入新密码</string>
    <string name="rmzt">热门专题</string>
    <string name="hyxw">行业新闻</string>
    <string name="cpjg">产品价格</string>
    <string name="nzzs">农资知识</string>
    <string name="tv_switch_seller">切换为卖家</string>
    <string name="tx_msdl">马上登录</string>
    <string name="tx_ymdcp">已买到的产品</string>
    <string name="tx_alldingdan">全部订单</string>
    <string name="tx_gouwuche">购物车</string>
    <string name="tx_fbxjd">发布询价单</string>
    <string name="tx_xjdgl">询价单管理</string>
    <string name="tx_sc">我的收藏</string>
    <string name="tx_wdzj">我的足迹</string>
    <string name="tx_shdz">收货地址</string>
    <string name="tx_zhgl">个人中心</string>
    <string name="tx_setting">设置</string>
    <string name="tv_switch_buyer">切换为买家</string>
    <string name="tx_dp">我的店铺</string>
    <string name="tv_ymc">已卖出的产品</string>
    <string name="tx_jyzw">交易账务</string>
    <string name="tx_tqck">提取存款</string>
    <string name="tx_fbcp">发布产品</string>
    <string name="tx_cpgl">产品管理</string>
    <string name="tx_ckdp">查看店铺</string>
    <string name="tx_xpgl">询盘管理</string>
    <string name="tx_gsgl">公司管理</string>
    <string name="scan_text">请将条码置于取景框内扫描</string>
    <string name="tv_or">或</string>
    <string name="tv_xjbt">询价标题:</string>
    <string name="tv_xjbt_hint">例：农大复合肥</string>
    <string name="tv_xjbt_type">类别:</string>
    <string name="tv_xjbt_num">数量:</string>
    <string name="tv_num">数量</string>
    <string name="tv_province">省</string>
    <string name="tv_city">市</string>
    <string name="tv_gys">供应商:</string>
    <string name="tv_shdz">收获地址:</string>
    <string name="tv_cgrq">采购截止日期:</string>
    <string name="tv_select_time">请选择日期</string>
    <string name="tv_fu">发布</string>
    <string name="tv_qyzlgl">企业资料管理</string>
    <string name="tv_gongsiname">公司名称：</string>
    <string name="tv_name_not_change">(公司名称不能修改)</string>
    <string name="tv_gsms">公司描述：</string>
    <string name="tv_ssqy">所属区域：</string>
    <string name="tv_xxdz">详细地址：</string>
    <string name="tv_gsjc">公司简称：</string>
    <string name="tv_gsdh">公司电话：</string>
    <string name="tv_gscz">公司传真：</string>
    <string name="tv_lxr">联系人：</string>
    <string name="tv_lxdh">联系电话：</string>
    <string name="tv_yyzz">营业执照</string>
    <string name="tv_swdj">税务登记证</string>
    <string name="tv_zzjg">组织机构代码证</string>
    <string name="tv_sczj">上传证件：</string>
    <string name="tv_img_tips">提示：请上传扫描件或复印件，需以图片形式上传每个文件小于2M</string>
    <string name="tv_tj">提交</string>
    <string name="tv_ljty">立即体验</string>
    <string name="tv_jbcs">商品基本参数：</string>
    <string name="tv_jbcs_tips">(填错商品属性讲可能导致商品下架或搜索不到，请准确填写商品属性！)</string>
    <string name="tv_spbt">商品标题：</string>
    <string name="tv_sixty">60字以内</string>
    <string name="tv_keys">关键字：</string>
    <string name="tv_thirty">30字以内</string>
    <string name="tv_zyyt">主要用途：</string>
    <string name="tv_zycf">主要成分：</string>
    <string name="tv_pp">品牌：</string>
    <string name="tv_dw">单位：</string>
    <string name="tv_spjg">商品价格：</string>
    <string name="tv_finish">完成</string>
    <string name="tv_tp_sm">图片和详细说明</string>
    <string name="tv_sptp">商品图片：</string>
    <string name="tv_sc_tips">您可以上传8张图片大小不超过5M，支持jpg,jpeg,gif,bmb格式</string>
    <string name="tv_ms">商品描述：</string>
    <string name="tv_rbyn">200字以内</string>
    <string name="tv_xq">商品详情：</string>
    <string name="tv_check_all">全选</string>
    <string name="tv_plxj">批量下架</string>
    <string name="tv_del">删除</string>
    <string name="tv_cpxx">产品信息</string>
    <string name="tv_fbsj">发布时间</string>
    <string name="tv_zxjy">在线交易</string>
    <string name="tv_cz">操作</string>
    <string name="tv_update">修改</string>
    <string name="tv_xj">下架</string>
    <string name="tv_qbsp">全部商品</string>
    <string name="tv_dpsy">店铺首页</string>
    <string name="tv_grzlgl">个人资料管理</string>
    <string name="tv_jbxx">基本信息</string>
    <string name="tv_tx">头像：</string>
    <string name="tv_zsxm">真实姓名：</string>
    <string name="tv_sj">手机号码：</string>
    <string name="tv_yyz">[已验证]</string>
    <string name="tv_qq">QQ：</string>
    <string name="tv_qd">确定</string>
    <string name="tv_dlmm">登录密码</string>
    <string name="tv_dlmm_tips">互联网账号存在被盗分险,建议您定期更改密码以保证账户安全。</string>
    <string name="tv_sjyz">手机验证</string>
    <string name="tv_sjyz_tips">您验证的手机：157****0385若已丢失或停用，立即更换，避免账号被盗。</string>
    <string name="tv_jrdp">进入店铺</string>
    <string name="tv_cxjz">重新加载</string>
    <string name="tv_network_fail">网络请求失败</string>
    <string name="tv_network_check">请检查您的网络</string>
    <string name="tv_tips">没有网络连接，请检查您的网络设置</string>

</resources>