<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_margin="12dp"
        android:background="@color/white_color" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/icon_true" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="6dp"
            android:layout_toRightOf="@+id/imageView1"
            android:text="@string/tv_dlmm"
            android:textColor="@color/base_color_text_black"
            android:textSize="@dimen/textSize_svprogresshuddefault_msg" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/textView1"
            android:layout_toLeftOf="@+id/btn_reset_password"
            android:text="@string/tv_dlmm_tips"
            android:layout_marginLeft="4dp"
            android:singleLine="true"
            android:textColor="@color/title_yellow_text_color"
            android:textSize="@dimen/text_small_size" />

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="48dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:background="@drawable/button_bg"
            android:enabled="true"
            android:textColor="@color/white_color"
            android:textSize="@dimen/text_mid_size" 
            android:text="@string/tv_update" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_margin="12dp"
        android:background="@color/white_color" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/icon_true" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="6dp"
            android:layout_toRightOf="@+id/imageView2"
            android:text="@string/tv_sjyz"
            android:textColor="@color/base_color_text_black"
            android:textSize="@dimen/textSize_svprogresshuddefault_msg" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/textView2"
            android:layout_toLeftOf="@+id/btn_reset_phonenumber"
            android:text="@string/tv_sjyz_tips"
            android:layout_marginLeft="4dp"
            android:singleLine="true"
            android:textColor="@color/title_yellow_text_color"
            android:textSize="@dimen/text_small_size" />

        <Button
            android:id="@+id/btn_reset_phonenumber"
            android:layout_width="48dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:background="@drawable/button_bg"
            android:enabled="true"
            android:textColor="@color/white_color"
            android:textSize="@dimen/text_mid_size" 
            android:text="@string/tv_update" />
    </RelativeLayout>

</LinearLayout>