<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/base_color_text_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RelativeLayout
                android:layout_width="72dp"
                android:layout_height="match_parent" >
            </RelativeLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/tv_yyzz"
                    android:textColor="@color/base_color_text_black"
                    android:textSize="@dimen/text_mid_size" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/tv_swdj"
                    android:textColor="@color/base_color_text_black"
                    android:textSize="@dimen/text_mid_size" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/tv_zzjg"
                    android:textColor="@color/base_color_text_black"
                    android:textSize="@dimen/text_mid_size" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp" 
            android:layout_marginTop="4dp"
            >

            <RelativeLayout
                android:layout_width="78dp"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/t12"
                    style="@style/CommonTextAtyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="8dp"
                    android:text="@string/tv_sczj" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <com.nongziwang.view.ProcessImageView
                    android:id="@+id/image_yyzz"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:scaleType="fitXY"
                    android:src="@drawable/jy_drltsz_btn_addperson" />

                <com.nongziwang.view.ProcessImageView
                    android:id="@+id/image_swdj"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:scaleType="fitXY"
                    android:src="@drawable/jy_drltsz_btn_addperson" />

                <com.nongziwang.view.ProcessImageView
                    android:id="@+id/image_zzjg"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:scaleType="fitXY"
                    android:src="@drawable/jy_drltsz_btn_addperson" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/textVi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/tv_tips_bg"
                    android:text="@string/tv_img_tips"
                    android:textColor="@color/base_color_text_black"
                    android:textSize="@dimen/text_small_size" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/actionbar_hight"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/button_bg"
            android:enabled="true"
            android:text="@string/tv_tj"
            android:textColor="@color/white_color"
            android:textSize="@dimen/common_text_size" />
    </LinearLayout>

</LinearLayout>